--- a/API-Gateway-Track-and-Alert/appsettings.json
+++ b/API-Gateway-Track-and-Alert/appsettings.json
@@ -10,7 +10,7 @@
     {
       "UpstreamPathTemplate": "/articles/{everything}",
       "UpstreamHttpMethod": [ "Get", "Post" ],
-      "DownstreamPathTemplate": "/{everything}",
+      "DownstreamPathTemplate": "/api/articles/{everything}",
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
@@ -28,7 +28,7 @@
     {
       "UpstreamPathTemplate": "/wikis/{everything}",
       "UpstreamHttpMethod": [ "Get", "Post" ],
-      "DownstreamPathTemplate": "/{everything}",
+      "DownstreamPathTemplate": "/api/wikis/{everything}",
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
