--- a/API-Gateway-Track-and-Alert/appsettings.json
+++ b/API-Gateway-Track-and-Alert/appsettings.json
@@ -10,7 +10,7 @@
     {
       "UpstreamPathTemplate": "/articles/{everything}",
       "UpstreamHttpMethod": [ "Get", "Post" ],
-      "DownstreamPathTemplate": "/api/articles/{everything}",
+      "DownstreamPathTemplate": "/articles/{everything}",
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
